--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,7 +1,16 @@
 [mypy]
 
+[mypy-matplotlib.*]
+ignore_missing_imports = True
+
 [mypy-oops.*]
 ignore_missing_imports = True
 
-[mypy-pdstable]
+[mypy-pdstable.*]
+ignore_missing_imports = True
+
+[mypy-polymath.*]
+ignore_missing_imports = True
+
+[mypy-scipy.*]
 ignore_missing_imports = True
