--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,9 +1,15 @@
 [mypy]
+strict = True
+disallow_subclassing_any = False
+plugins = numpy.typing.mypy_plugin
 
-[mypy-matplotlib.*]
-ignore_missing_imports = True
+; [mypy-matplotlib.*]
+; ignore_missing_imports = True
 
 [mypy-oops.*]
+ignore_missing_imports = True
+
+[mypy-pdslogger.*]
 ignore_missing_imports = True
 
 [mypy-pdstable.*]
