--- a/.mypy.ini
+++ b/.mypy.ini
@@ -17,5 +17,8 @@ ignore_missing_imports = True
 [mypy-polymath.*]
 ignore_missing_imports = True
 
+[mypy-psfmodel.*]
+ignore_missing_imports = True
+
 [mypy-scipy.*]
 ignore_missing_imports = True
