Get star distortion working, add LORRI

--- a/nav/config_files/config_10_satellites.yaml
+++ b/nav/config_files/config_10_satellites.yaml
@@ -58,9 +58,9 @@ satellites:
     - TRITON
   PLUTO:
     - CHARON
-    - HYDRA
+    # - HYDRA
     - KERBEROS
-    - NIX
+    # - NIX
     - STYX
 
 fuzzy_satellites:
