--- a/.github/workflows/publish_to_test_pypi.yml
+++ b/.github/workflows/publish_to_test_pypi.yml
@@ -14,17 +14,14 @@ jobs:
           fetch-depth: 0
 
       - name: Set up Python 3.12
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.12
 
-      - name: Install dependencies
-        run: |
-          python -m pip install -r requirements.txt
-
       - name: Build
         run: |
-          python3 -m pip install --upgrade build && python3 -m build
+          python -m pip install -U pip
+          python -m pip install --upgrade build && python -m build
 
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
@@ -33,3 +30,4 @@ jobs:
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository-url: https://test.pypi.org/legacy/
           verify-metadata: false
+          skip-existing: true
