--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,5 @@
         "tests"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true,
-    "cursorpyright.analysis.autoImportCompletions": true
+    "python.testing.pytestEnabled": true
 }
