Fix type errors

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,9 +31,9 @@ jobs:
         run: |
           flake8 nav tests
 
-      # - name: Mypy
-      #   run: |
-      #     mypy nav tests
+      - name: Mypy
+        run: |
+          mypy nav tests
 
   test:
     name: Test nav
