BOTSIM, metadata, cleanup

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -5,6 +5,9 @@ disallow_subclassing_any = False
 ; [mypy-matplotlib.*]
 ; ignore_missing_imports = True
 
+[mypy-julian.*]
+ignore_missing_imports = True
+
 [mypy-oops.*]
 ignore_missing_imports = True
 
