--- a/nav/config_files/config_01_settings.yaml
+++ b/nav/config_files/config_01_settings.yaml
@@ -201,16 +201,29 @@ rings:
 ##################
 
 stars:
-  calibrated_data: true
+  catalogs: [ ucac4, tycho2, ybsc ]  # Order of most precise to least
+  body_conflict_margin: 5
+  default_star_class: G0
   stellar_aberration: true
   proper_motion: true
+  max_stars: 100
+  max_movement_steps: 50
+  label_font: liberation2/LiberationMono-Bold.ttf
+  label_font_size: 18
+  label_font_color: [255, 0, 0]  # Red
+  label_star_color: [255, 0, 0]  # Red
+  correlation_fft_upsample_factor: 128
+  duplicate_ra_dec_threshold_arcsec: 5  # Closer than this - stars are true duplicates
+  duplicate_vmag_threshold: 3  # Less than this - stars are true duplicates
+  overlapping_vmag_threshold: 2  # Less than this - remove both stars when visually overlapping
+
+  calibrated_data: true
   float_psf_sigma: false
   search_multipliers:
     - 0.25
     - 0.5
     - 0.75
     - 1.0
-  max_stars: 30
   perform_photometry: true
   try_without_photometry: false
   min_stars_low_confidence:
@@ -223,10 +236,7 @@ stars:
   psf_gain:
     - 5000
     - 4
-  max_movement_steps: 50
   max_smear: 100
-  default_star_class: G0
-  body_conflict_margin: 5
   min_vmag: 5.0
   max_vmag: 15.0
   vmag_increment: 0.5
@@ -235,10 +245,6 @@ stars:
   star_body_conflict_margin: 3
   too_bright_dn: 1000
   too_bright_factor: 1  # TODO
-  label_star_color: [255, 0, 0]  # Red
-  label_font: liberation2/LiberationMono-Bold.ttf
-  label_font_size: 18
-  label_font_color: [255, 0, 0]  # Red
 
 ##################
 # TITAN SETTINGS #
