--- a/nav/config_files/config_01_settings.yaml
+++ b/nav/config_files/config_01_settings.yaml
@@ -21,6 +21,9 @@ general:
 ####################
 
 offset:
+  star_refinement_nsigma: 3
+  star_refinement_search_limit: [2.5, 2.5]
+  correlation_fft_upsample_factor: 128
   default_gaussian_blur: 0.25
   maximum_blur: 100.0
   maximum_blur_error_bars: 60.0
@@ -118,7 +121,7 @@ bodies:
   label_mask_enlarge: 10  # Number of pixels around a body to avoid for label placement
   label_limb_color: [255, 0, 0]  # Red
   label_font: liberation2/LiberationMono-Bold.ttf
-  label_font_size: 36  # 18
+  label_font_size: 18
     # 512: 18
   label_font_color: [255, 0, 0]  # Red
   # label_font_color: [255, 255, 0]  # Yellow
@@ -128,7 +131,7 @@ bodies:
   label_grid_v: 10    # Coarse grid for labeling a body if everything else fails
   label_grid_u: 10
   # Details of outline around bodies
-  outline_thicken: 1
+  outline_thicken: 0
 
 ##################
 # RINGS SETTINGS #
@@ -212,13 +215,9 @@ stars:
   label_font_size: 18
   label_font_color: [255, 0, 0]  # Red
   label_star_color: [255, 0, 0]  # Red
-  correlation_fft_upsample_factor: 128
   duplicate_ra_dec_threshold_arcsec: 5  # Closer than this - stars are true duplicates
   duplicate_vmag_threshold: 3  # Less than this - stars are true duplicates
   overlapping_vmag_threshold: 2  # Less than this - remove both stars when visually overlapping
-  max_refinement_iterations: 3
-  refinement_nsigma: 3
-  refinement_search_limit: [2.5, 2.5]
 
   calibrated_data: true
   float_psf_sigma: false
