Clean up flake8, mypy

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -25,3 +25,7 @@ ignore_missing_imports = True
 
 [mypy-scipy.*]
 ignore_missing_imports = True
+
+[mypy-starcat.*]
+; TODO Should not be needed because starcat has types
+ignore_missing_imports = True
