--- a/my_config.yaml
+++ b/my_config.yaml
@@ -3,6 +3,6 @@ environment:
   results_root: /data/nav-offset-results
 
 general:
-  log_level_nav_stars: DEBUG
-  log_level_model_stars: DEBUG
+  log_level_model_stars: INFO
+  log_level_nav_correlate_all: DEBUG
   log_level_annotate: ERROR
