--- a/nav/config_files/config_30_coiss.yaml
+++ b/nav/config_files/config_30_coiss.yaml
@@ -1,5 +1,23 @@
 cassini_iss:
-  extfov_margin_vu:
-    256: [50, 50]
-    512: [100, 100]
-    1024: [200, 200]
+  nac:
+    extfov_margin_vu:
+      256: [13, 25]
+      512: [25, 50]
+      1024: [50, 100]
+    star_psf_sigma: 0.54
+    star_psf_sizes:
+      7: [15, 15]
+      8: [13, 13]
+      9: [11, 11]
+      100: [9, 9]
+  wac:
+    extfov_margin_vu:
+      256: [5, 10]
+      512: [5, 10]
+      1024: [5, 10]
+    star_psf_sigma: 0.77
+    star_psf_sizes:
+      7: [15, 15]
+      8: [13, 13]
+      9: [11, 11]
+      100: [9, 9]
