--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -35,6 +35,10 @@ jobs:
         run: |
           mypy main nav
 
+      - name: Sphinx
+        run: |
+          sphinx-build -b html docs docs/_build
+
   test:
     name: Test nav
     runs-on: ${{ matrix.os }}
