--- a/.mypy.ini
+++ b/.mypy.ini
@@ -5,6 +5,12 @@ disallow_subclassing_any = False
 ; [mypy-matplotlib.*]
 ; ignore_missing_imports = True
 
+[mypy-astropy.*]
+ignore_missing_imports = True
+
+[mypy-cspyce.*]
+ignore_missing_imports = True
+
 [mypy-imgdisp.*]
 ignore_missing_imports = True
 
@@ -18,6 +24,9 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-pdstable.*]
+ignore_missing_imports = True
+
+[mypy-pdstemplate.*]
 ignore_missing_imports = True
 
 [mypy-polymath.*]
