Fix pyproject and gitignore

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,9 +71,9 @@ local_scheme = "no-local-version"
 write_to = "src/nav/_version.py"
 
 [project.scripts]
-nav_offset = "src.main.nav_offset:main"
-nav_offset_cloud_tasks = "src.main.nav_offset_cloud_tasks:main"
-nav_create_simulated_image = "src.main.nav_create_simulated_image:main"
+nav_offset = "main.nav_offset:main"
+nav_offset_cloud_tasks = "main.nav_offset_cloud_tasks:main"
+nav_create_simulated_image = "main.nav_create_simulated_image:main"
 nav_backplanes = "src.main.nav_backplanes:main"
-nav_backplanes_cloud_tasks = "src.main.nav_backplanes_cloud_tasks:main"
-nav_backplane_viewer = "src.main.nav_backplane_viewer:main"
+nav_backplanes_cloud_tasks = "main.nav_backplanes_cloud_tasks:main"
+nav_backplane_viewer = "main.nav_backplane_viewer:main"
