--- a/.mypy.ini
+++ b/.mypy.ini
@@ -3,6 +3,9 @@ strict = True
 disallow_subclassing_any = False
 exclude = src/experiments
 
+[mypy-nav._version]
+ignore_missing_imports = True
+
 ; [mypy-matplotlib.*]
 ; ignore_missing_imports = True
 
