--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,8 @@ write_to = "src/nav/_version.py"
 nav_offset = "main.nav_offset:main"
 nav_offset_cloud_tasks = "main.nav_offset_cloud_tasks:main"
 nav_create_simulated_image = "main.nav_create_simulated_image:main"
-nav_backplanes = "src.main.nav_backplanes:main"
+nav_backplanes = "main.nav_backplanes:main"
 nav_backplanes_cloud_tasks = "main.nav_backplanes_cloud_tasks:main"
 nav_backplane_viewer = "main.nav_backplane_viewer:main"
+nav_create_bundle = "main.nav_create_bundle:main"
+nav_create_bundle_cloud_tasks = "main.nav_create_bundle_cloud_tasks:main"
