--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Sphinx
         run: |
-          sphinx-build -b html docs docs/_build
+          sphinx-build -W -b html docs docs/_build
 
       - name: PyMarkdown
         run: |
