--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -39,6 +39,15 @@ jobs:
         run: |
           mypy src tests
 
+      - name: Set up Node (for Mermaid CLI)
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Install Mermaid CLI
+        run: |
+          npm install -g @mermaid-js/mermaid-cli
+
       - name: Sphinx
         run: |
           sphinx-build -W -b html docs docs/_build
